# cpp-decimal

./: .clang-format  .gitignore  CMakeLists.txt  decimal.h
benchmark/: CMakeLists.txt  bench_mutable_bigint.cpp
javamath/: BigDecimal.java  BigInteger.java  BitSieve.java  MathContext.java  MutableBigInteger.java  RoundingMode.java  SignedMutableBigInteger.java  package-info.java
src/: big_decimal.h  bigdecimal.h  decimal.h  jarray.h
test/: CMakeLists.txt  test_jarray.cpp  test_mutable_bigint.cpp
